--- a/package.json
+++ b/package.json
@@ -9,13 +9,54 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^12.0.0",
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/hooks": "^2.8.1",
+    "@react-native-community/slider": "^4.3.0",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/drawer": "^6.4.3",
+    "@react-navigation/material-bottom-tabs": "*",
+    "@react-navigation/native": "*",
+    "@react-navigation/stack": "*",
+    "axios": "*",
+    "easy-peasy": "^5.0.4",
     "expo": "~46.0.13",
+    "expo-app-loading": "~1.3.0",
+    "expo-av": "~10.2.1",
+    "expo-battery": "~6.1.1",
+    "expo-constants": "~13.0.2",
+    "expo-facebook": "~12.1.0",
+    "expo-font": "~10.0.5",
+    "expo-linking": "^3.1.0",
     "expo-status-bar": "~1.4.0",
+    "firebase": "^9.8.4",
+    "moment": "^2.29.4",
     "react": "18.0.0",
-    "react-native": "0.69.6"
+    "react-native": "0.69.6",
+    "react-native-chatbox": "^1.2.1",
+    "react-native-elements": "*",
+    "react-native-gesture-handler": "2.2.1",
+    "react-native-gifted-chat": "^1.0.2",
+    "react-native-head-tab-view": "*",
+    "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-pager-view": "5.4.9",
+    "react-native-paper": "4.9.2",
+    "react-native-radio-player": "*",
+    "react-native-reanimated": "2.3.3",
+    "react-native-screens": "~3.10.1",
+    "react-native-sound-player": "*",
+    "react-native-tab-view": "*",
+    "react-native-timeline-flatlist": "*",
+    "react-native-track-player": "*",
+    "react-native-vector-icons": "*",
+    "react-native-web": "0.17.1",
+    "react-native-webview": "^11.22.4",
+    "socket.io-client": "^4.5.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/react": "~17.0.21",
+    "typescript": "~4.3.5"
   },
   "private": true
 }
